<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="traco.profiler.login.LoginFragment">

    <RelativeLayout
        android:id="@+id/cont_account_creation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txt_welcome_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/header_welcome"
            android:textSize="@dimen/text_size_header" />

        <TextView
            android:id="@+id/txt_email_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_welcome_header"
            android:layout_margin="16dp"
            android:text="@string/email_header" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_email_header"
            android:layout_margin="16dp"
            android:hint="@string/email_hint"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_password_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_email"
            android:layout_margin="16dp"
            android:text="@string/password_header" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_password_header"
            android:layout_margin="16dp"
            android:hint="@string/password_hint"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_password"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_account_creation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="16dp"
            android:text="@string/create_account"
            android:textColor="@color/black" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pro_login_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>
